# ai-debug-simulation

./: .env.example  .gitignore  README.md  TECHNICAL_PLAN.md  generate_demos.py  pyproject.toml  sample_run.json
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-09_16-48-45Z-multiagent-dungeon-simulation-technical-plan.md  2026-04-09_22-49-12Z-untitled.md  2026-04-15_00-37-28Z-untitled.md
demo_runs/: default_loss.json  dense_walls.json  high_lag.json  large_grid.json  small_quick.json
frontend/: package-lock.json  package.json  postcss.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/components/: BeliefInspector.tsx  DiagnosisPanel.tsx  DivergenceTimeline.tsx  EventTimeline.tsx  GridVisualizer.tsx  MetricsCards.tsx  PrescriptiveInsights.tsx  ReasoningStream.tsx  RunSelector.tsx  SimulationControls.tsx  StepViewer.tsx  SummaryBanner.tsx  TurnScrubber.tsx  WhyInspector.tsx
frontend/src/hooks/: useLiveStream.ts  useRunData.ts
frontend/src/lib/: api.ts  types.ts
scripts/: generate_sample_run.py
src/: config.py  main.py  runner.py
src/agents/: __init__.py  belief.py  graph.py  prompts.py  state.py  tools.py
src/instrumentation/: discrepancy.py  event_schema.py  langfuse_client.py  trace_builder.py
src/legibility/: diagnosis.py  recommendations.py  router.py  schemas.py
src/simulation/: __init__.py  dungeon_master.py  grid.py  items.py  scenarios.py  state.py
tests/: test_diagnosis.py  test_discrepancy.py  test_dungeon_master.py  test_grid.py
