[project]
name = "prove-ai-dungeon"
version = "0.1.0"
description = "Multi-agent dungeon simulation with agent observability and legibility"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langfuse>=2.50",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
